--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,8 +15,13 @@ repos:
       - id: prettier
         files: src/
 
-  - repo:  https://github.com/milin/giticket
+  - repo: https://github.com/milin/giticket
     rev: v1.3
     hooks:
-    - id:  giticket
-      args: ['--regex=(\d+)',"--mode=regex_match", '--format={commit_msg} | [#{ticket}]']
+      - id: giticket
+        args:
+          [
+            '--regex=(\d+)',
+            "--mode=regex_match",
+            "--format={commit_msg} | [#{ticket}]",
+          ]
