--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "astro dev",
     "format:write": "prettier src/ --write",
     "format:check": "prettier src/ --check",
-    "lint:check":"eslint",
-    "lint:fix":"eslint --fix",
+    "lint:check": "eslint",
+    "lint:fix": "eslint --fix",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -17,6 +17,7 @@
     "astro": "^5.1.2"
   },
   "devDependencies": {
+    "@astrojs/ts-plugin": "^1.10.4",
     "eslint": "^9.17.0",
     "eslint-plugin-astro": "^1.3.1",
     "prettier": "^3.4.2",
