--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "format:check": "prettier src/ --check",
     "lint:check": "eslint",
     "lint:fix": "eslint --fix",
-    "build": "astro build",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.2"
+    "astro": "^5.1.2",
+    "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/ts-plugin": "^1.10.4",
     "eslint": "^9.17.0",
     "eslint-plugin-astro": "^1.3.1",
