--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.2.1",
     "astro": "^5.1.2",
     "typescript": "^5.7.2"
   },
