--- a/package.json
+++ b/package.json
@@ -5,11 +5,26 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro build",
+    "format:write": "prettier src/ --write",
+    "format:check": "prettier src/ --check",
+    "lint:check": "eslint",
+    "lint:fix": "eslint --fix",
+    "check": "astro check",
+    "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.2"
+    "@astrojs/sitemap": "^3.2.1",
+    "astro": "^5.1.2",
+    "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/ts-plugin": "^1.10.4",
+    "eslint": "^9.17.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
