--- a/.github/workflows/deploy-with-mkdocs.yml
+++ b/.github/workflows/deploy-with-mkdocs.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Checkout your repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js for Astro (optional)
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 16
+          node-version: "20"
 
-      - name: Install dependencies (if required for your Astro build)
+      - name: Install dependencies
         run: npm install
 
       - name: Checkout MkDocs repo and copy site to the current project
