--- a/.github/workflows/deploy-with-mkdocs.yml
+++ b/.github/workflows/deploy-with-mkdocs.yml
@@ -40,9 +40,14 @@ jobs:
         run: |
           pip install -r main_repo/requirements-docs.txt
 
-      - name: BUild and Copy MkDocs build files
+      - name: Build MkDocs
         run: |
           mkdocs build
+        working-directory: main_repo
+
+
+      - name: Copy MkDocs build files
+        run: |
           cp -r main_repo/site/* ./public/docs/
 
       - name: Build the Astro site
