--- a/.github/workflows/deploy-with-mkdocs.yml
+++ b/.github/workflows/deploy-with-mkdocs.yml
@@ -48,6 +48,7 @@ jobs:
 
       - name: Copy MkDocs build files
         run: |
+          mkdir -p ./public/docs
           cp -r main_repo/site/* ./public/docs/
 
       - name: Build the Astro site
