--- a/.github/workflows/deploy-with-mkdocs.yml
+++ b/.github/workflows/deploy-with-mkdocs.yml
@@ -51,6 +51,10 @@ jobs:
           mkdir -p ./public/docs
           cp -r main_repo/site/* ./public/docs/
 
+      - name: Remove main repository folder
+        run: |
+          rm -rf main_repo
+
       - name: Build the Astro site
         run: npm run build
 
