ci: add pipeline for building mkdocs inside the main landing page | [#5]

--- a/.github/workflows/deploy-with-mkdocs.yml
+++ b/.github/workflows/deploy-with-mkdocs.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages with generated MkDocs from SpotifyElectron reposito
 
 on:
   push:
-    branches: [feat/5-integrate-mkdocs-inside-landing-page] # ! change it when test is done
+    branches: [main]
   workflow_dispatch:
 
 permissions:
