ci: set the minimum required permissions in every workflow

--- a/.github/workflows/prettier-style.yml
+++ b/.github/workflows/prettier-style.yml
@@ -2,9 +2,9 @@ name: Prettier Style
 
 on:
   pull_request:
-    branches:
-      - "main"
-      - "main-*"
+
+permissions:
+  contents: read
 
 jobs:
   run-frontend-style-check:
