--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Build check
 
 on:
   pull_request:
-    branches:
-      - "main"
-      - "main-*"
+
+permissions:
+  contents: read
 
 jobs:
   run-frontend-style-check:
